Add APIs to learn and forget a spell (#174)
